--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,22 +2,45 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "name": "nodemon",
+      "program": "${workspaceFolder}/backend/src/index.ts",
       "request": "launch",
-      "name": "Node backend",
+      "restart": true,
+      "env": {
+        "SECRET_KEY": "totosecretkey",
+        "DB_USER": "monUtilisateur",
+        "DB_PASS": "monMotDePasse",
+        "DB_NAME": "maBaseDeDonnees",
+        "DB_HOST": "localhost",
+        "DB_PORT": "27017",
+        "BackendPORT": "8000"
+      },
+      "runtimeExecutable": "nodemon",
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/backend/index.js",
-      "env":{
+      "type": "node"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Node backend",
+      "runtimeExecutable": "ts-node",
+      "args": ["${workspaceFolder}/backend/src/index.ts"],
+      "env": {
         "SECRET_KEY": "totosecretkey",
-        "DB_USER":"monUtilisateur",
-        "DB_PASS":"monMotDePasse",
-        "DB_NAME":"maBaseDeDonnees",
-        "DB_HOST":"localhost",
-        "DB_PORT":"27017",
-        "BackendPORT":"8000"
-      }
+        "DB_USER": "monUtilisateur",
+        "DB_PASS": "monMotDePasse",
+        "DB_NAME": "maBaseDeDonnees",
+        "DB_HOST": "localhost",
+        "DB_PORT": "27017",
+        "BackendPORT": "8000"
+      },
+      "sourceMaps": true,
+      "outFiles": ["${workspaceFolder}/backend/dist/**/*.js"],
+      "skipFiles": ["<node_internals>/**"]
     },
     {
       "type": "node-terminal",
