--- a/colinker/package.json
+++ b/colinker/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.16.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.0.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
