--- a/colinker/package.json
+++ b/colinker/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.0.0",
+    "moment": "^2.30.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
