--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,11 @@ SECRET_KEY= totosecretkey
 DB_USER=monUtilisateur
 DB_PASS=monMotDePasse
 DB_NAME=maBaseDeDonnees
-DB_HOST=mongo
+DB_HOST=localhost
 DB_PORT=27017
+DB_PORT1=27017
+DB_PORT2=27017
+
 
 BackendPORT=8000
 AWS_REGION=eu-west-3
