--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./node_modules/@types", "./src/@types"],
+    // "baseUrl": ".",
+    // "paths": {
+    //   "*": ["node_modules/*", "src/@types/*"]
+    // },
+    //"typeRoots": ["./node_modules/@types", "./src/@types"],
+    "typeRoots": ["./node_modules/@types", "src/types"],
     "types": ["express"],
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
@@ -28,12 +33,13 @@
 
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
-     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
+    "rootDir": "./src",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-    // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+    //"baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
+    //"paths": {
+    //      "*": ["node_modules/*", "src/types/*"]       
+    //    },   
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
