--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "firebase-admin": "^12.0.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
