--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,33 +2,33 @@ version: '3.8'
 
 services:
   mongo:
-    image: mongo
+    image: arm64v8/mongo:4.2.6
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${DB_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${DB_PASS}
       MONGO_INITDB_DATABASE: ${DB_NAME}
     ports:
-      - "${DB_PORT1}:${DB_PORT2}"
+      - "3001:27017"
     volumes:
       - mongo-data:/data/db
 
-  # backend:
-  #   build: .
-  #   environment:
-  #     DB_USER: ${DB_USER}
-  #     DB_PASS: ${DB_PASS}
-  #     DB_NAME: ${DB_NAME}
-  #     DB_HOST: ${DB_HOST}
-  #     DB_PORT: ${DB_PORT}
-  #     PORT: 8000
-  #   ports:
-  #     - "8000:8000"
-  #   depends_on:
-  #     - mongo
-  #   volumes:
-  #     - ./src:/app/src
-  #     - /app/node_modules
-  #   command: npm run start
+  backend:
+    build: .
+    environment:
+      DB_USER: ${DB_USER}
+      DB_PASS: ${DB_PASS}
+      DB_NAME: ${DB_NAME}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      PORT: 8000
+    ports:
+      - "8000:8000"
+    depends_on:
+      - mongo
+    volumes:
+      - ./src:/app/src
+      - /app/node_modules
+    command: npm run start
 
 volumes:
   mongo-data:
